[package]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
description = "Continuously read,write to disk, using random offsets and lengths"
documentation = "https://docs.rs/random-access-disk"
license = "MIT OR Apache-2.0"
name = "random-access-disk"
readme = "README.md"
repository = "https://github.com/datrs/random-access-disk"
version = "2.0.0"
edition = "2018"

[dependencies]
anyhow = "1.0.26"
mkdirp = "1.0.0"
random-access-storage = { git = "https://github.com/ttiurani/random-access-storage", branch = "tokio"}
async-std = { version = "1.12.0", optional = true }
tokio = { version = "1.25.0", optional = true, features = ["fs", "io-util"] }
async-trait = "0.1.63"
libc = { version = "0.2", optional = true }

[dev-dependencies]
quickcheck = "0.9.2"
rand = "0.7.3"
tempfile = "3.1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }

[features]
default = ["sparse"]
sparse = ["libc"]
