[package]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>", "Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]
description = "Continuously read and write to disk, using random offsets and lengths"
documentation = "https://docs.rs/random-access-disk"
license = "MIT OR Apache-2.0"
name = "random-access-disk"
readme = "README.md"
repository = "https://github.com/datrs/random-access-disk"
version = "3.0.0-beta.0"
edition = "2021"

[dependencies]
mkdirp = "1.0.0"
random-access-storage = { git = "https://github.com/ttiurani/random-access-storage", branch = "thiserror" }
async-std = { version = "1.12.0", optional = true }
tokio = { version = "1.25.0", optional = true, features = ["fs", "io-util"] }
async-trait = "0.1.63"
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["ioapiset", "winioctl"] }

[dev-dependencies]
quickcheck = "0.9.2"
rand = "0.7.3"
tempfile = "3.1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1.25.0", features = ["macros", "rt", "rt-multi-thread"] }
criterion = { version = "0.4", features = ["async_std", "async_tokio"] }
tokio-test = "0.4"

[features]
default = ["sparse"]
sparse = ["libc"]

[[bench]]
name = "sync"
harness = false
